<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:overScrollMode="ifContentScrolls">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_main_screen"
        android:orientation="vertical"
        android:padding="@dimen/dimen_25dp">

        <TextView
            android:id="@+id/user_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="Noobmaster69"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_35sp"
            app:layout_constraintEnd_toStartOf="@id/exit_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exit_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/exit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/created_tests_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_50dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/created_tests"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_35sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_login" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_created_tests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:descendantFocusability="beforeDescendants"
            android:fastScrollEnabled="false"
            android:nestedScrollingEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/created_tests_title"
            tools:itemCount="2"
            tools:listitem="@layout/item_test" />

        <TextView
            android:id="@+id/passed_tests_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_50dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/passed_tests"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_35sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_created_tests" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_passed_tests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:descendantFocusability="beforeDescendants"
            android:fastScrollEnabled="false"
            android:nestedScrollingEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/created_tests_title"
            tools:itemCount="2"
            tools:listitem="@layout/item_test" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>